Added project section in my protfolio

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <nav class="navbar">
             <a href="#home">Home</a>
             <a href="#about">About</a>
-            <a href="#services">Services</a>
+            <a href="#Project">Project</a>
             <a href="#testimonial">Testimonial</a>
             <a href="#contact">Contact</a>
         </nav>
@@ -152,5 +152,38 @@
            </div>
         </div>
     </section>
+
+
+    <section id="Project" class="Project">
+
+       
+        <div class="project-show">
+            <div class="project-item">
+                <img src="./src/project1.png" alt="Project 1">
+                <p>Skin Care E-commerce site</p>
+                <p>Here people can buy their essentaial project and they can it support online payment</p>
+                <p>Build with:HTML <br>CSS <br>JAVASCRIPT</p>
+            </div>
+            <div class="project-item">
+                <img src="./src/project3.png" alt="Project 2">
+                <p>A travel Website</p>
+                <p>This wesite offer people to customized their holyday package</p>
+                <p>Build with:HTML <br>CSS <br>JAVASCRIPT</p>
+            </div>
+            <div class="project-item">
+                <img src="./src/project4.png" alt="Project 3">
+                <p>A personal website</p>
+                <p>Here people can add their activities and check their persormance</p>
+                <p>Build with:HTML <br>CSS <br>JAVASCRIPT</p>
+            </div>
+            <div class="project-item">
+                <img src="./src/project2.png" alt="Project 4">
+                <p>Online News Website</p>
+                <p>Here provide all internatinal and national news</p>
+                <p>Build with:HTML <br>CSS <br>JAVASCRIPT</p>
+            </div>
+        </div>
+    </section>
+    
 </body>
 </html>
