Add readme and fished my project

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <div class="row">
                 <div class="about_text">
                     <h3>I'm Farhana Haque Setu, a <span>Web Developer</span></h3>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illum maiores non praesentium asperiores delectus, excepturi quidem exercitationem rem modi fugit suscipit eum consequuntur, culpa laboriosam officia libero quasi atque repudiandae placeat. Tempore reprehenderit dolores quod aut eligendi voluptate minus voluptatum, debitis necessitatibus ipsam vitae et, maxime facere soluta modi delectus!</p>
+                    <p>Willing to build up a career in a challenging position and to prove myself as a quick learner and highly energetic person to face any challenge in the IT sector where my contribution will be acknowledged If would give an opportunity..</p>
                 </div>
             </div>
             <div class="row1">
